<resources>
    <string name="app_name">Elderly Health Managment System</string>
    <string name="Register">Register </string>
    <string name="noyet"> Not Registered Yet?</string>
    <string name="heyThere"> Hello There!</string>
    <string name="signmessage"> Already Signed Up?</string>
    <string name="Login"> Log In</string>
    <string name="SignIn">Sign In </string>
    <string name="username"> UserName</string>
    <string name="title_activity_therapist">TherapistActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hello [Username]</string>
    <string name="nav_header_subtitle">[userType]</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

</resources>
