<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/signtitle"
        android:layout_width="194dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:text="@string/SignIn"
        android:textColor="@color/White"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/txtuserlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/txtpasslogin"
        android:layout_width="257dp"
        android:layout_height="58dp"

        android:layout_marginBottom="32dp"
        android:background="@drawable/plaintext"
        android:ems="10"
        android:hint="  •••••••••••"
        android:inputType="textPassword"
        android:textColor="@color/grey"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtuserlogin"
        android:layout_width="257dp"
        android:layout_height="58dp"

        android:layout_marginBottom="32dp"
        android:background="@drawable/plaintext"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtpasslogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.73"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="141dp"
        android:layout_height="51dp"

        android:layout_marginBottom="32dp"
        android:background="@drawable/button"
        android:text="@string/Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnback"
        android:layout_width="46dp"
        android:layout_height="56dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/backbutton"
        android:contentDescription="back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004"
        app:srcCompat="@drawable/back" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="206dp"
        android:layout_height="29dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/plaintext"
        app:layout_constraintBottom_toTopOf="@+id/btnlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.775"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>